:encoding=UTF-8:

{{{ Version 4.5pre1

Thanks to Björn "Vampire" Kautler, Matthieu Casanova, Alan Ezust, cy6erGn0m,
Bad Sector, jclopes, Dale Anson, Anshal Shukla, Ryan Mott, Damien Radtke,
Matthew Gilbert, Dennis Hotson, Kevin Hunter, encorejane, nherzing,
Evan Wright, Shlomy Reinstein, Marcelo Vanzin and Eric Le Lay for contributing
to this release.

{{{ Bug fixes
- Pressing left arrow when the caret is at the buffer start but in a selection
  now cancel the selection as it should do (#3396672) (Matthieu Casanova)

- Fixed loading of jEdit in case of corrupted recent.xml file in the settings
  (#3396545) (Matthieu Casanova)

- Fixed a class loading issue when no GUI (SplashScreen or TrayIcon) was shown
  on startup. The effects were visible if the VoxSpell plugin was installed
  and the Markdown plugin was tried to be used. (Björn "Vampire" Kautler)

- When changing the Look and Feel on-the-fly, already shown JTrees with
  explicitly set TreeCellRenderers were rendered wrongly, now they are robust
  in regards to Look and Feel changes. (Björn "Vampire" Kautler)

- When removing a plugin, the update and install panel were not refreshed
  (Matthieu Casanova)

- Fixed plugin install panel : when the selected plugin had dependencies that
  were not visible because of the filtered view, those dependencies were not
  installed. Now the install panel will always show selected plugins so you can
  know what will be installed (Matthieu Casanova)

- If the current buffer is on a VFS that is not browseable (ex:http), trying
  to open a new file was trying to browse the path of the current file giving
  an error (Matthieu Casanova)

- The selectionLength status bar widget is now updated when jEdit starts, and
  says 0 instead of nothing if there is no selection (Matthieu Casanova)

- Fixed the file properties dialog when the VFS has no rename capability
  (Matthieu Casanova)

- Latex string literal fixed : when starting with `` the String literal can